2024-11-03  Ulrich Müller  <ulm@gentoo.org>

	* test/xemacs-test-wrapper.el (ert-deftest): Silence info-level
	warnings in XEmacs 21.5.

	* ebuild-mode.el (ebuild-run-command-*): Doc fix.

	* ebuild-mode.el (ebuild-mode-get-completion-function):
	(ebuild-mode-get-keywords, ebuild-mode-unescape-string):
	* test/ebuild-mode-tests.el (ebuild-mode-test-unescape-string):
	Delete XEmacs 21.4 compatibility code.

	* ebuild-mode.el (ebuild-mode-time-string): Delete compatibility
	function for XEmacs 21.4.
	(ebuild-mode-update-copyright, ebuild-mode-insert-skeleton)
	(ebuild-mode-insert-tag-line): Update all callers.
	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton):
	* glep-mode.el (glep-mode-update-last-modified)
	(glep-mode-insert-skeleton): Update all callers.
	* test/ebuild-mode-tests.el
	(ebuild-mode-test-run-with-fixed-time): Update macro.
	(ebuild-mode-test-time-string): Delete test.

2024-10-23  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (devbook-locate-schema-file): Be less verbose
	if noninteractive.
	* test/devbook-mode-tests.el (devbook-mode-test-locate-schema):
	New test.

2024-10-14  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el:
	* test/ebuild-mode-tests.el: Avoid e as variable name because some
	Emacs versions define it as a global constant for Euler's number.

2024-10-12  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (rng-loc): Require.
	(devbook-schema-file-name): New variable.
	(devbook-locate-schema-file): New function.
	(devbook-mode): Call it unless we already have a schema.

	* ebuild-mode.el (ebuild-mode-tabify): Do not let-bind
	tabify-regexp because it is a special variable.
	(ebuild-run-command): Ditto for shell-command.
	* ebuild-mode.el:
	* glep-mode.el:
	* test/ebuild-mode-tests.el: Use unhyphenated names for lexical
	variables throughout, in order not to accidentally override any
	special variables.

2024-10-08  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-stable-list): Don't fall back